Cập nhật cơ bản khung các bài viết

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,8 +5,8 @@
   {% seo %} 
 
   <meta name="theme-color" content="#161616" />
-  <meta name="keywords"
-    content="visual poi, visual, led, mạch điều khiển led, module led, panel led, led dance, led man, lazer dance" />
+  <meta name="keywords" content="du lịch, tour du lịch, vé máy bay, làm visa, dịch vụ visa, đặt phòng khách sạn, du lịch trong nước, du lịch quốc tế, công ty du lịch, tour trọn gói, Hùng Vĩ Tourist" />
+
   <!-- ZALO -->
     <meta name="zalo-platform-site-verification" content="VjgU4fhECZ9p-8CHjenMCaQSxHcgwZn2C3Wu" />
   <!-- lightbox : https://github.com/lokesh/lightbox2.git -->
