--- a/_includes/qr-zalo.html
+++ b/_includes/qr-zalo.html
@@ -1,6 +1,6 @@
 <!-- _includes/qr-zalo.html -->
 <div class="qr-code">
-  <p>Theo dõi Zalo OA HSL nhé</p>
+  <p>📲 Theo dõi Zalo OA Hung Vi Tourist ngay hôm nay!</p>
   <a href="http://zalo.me/1321084611356589870?src=qr" target="_blank">
     <img src="/img/Picture-HSL/qrcode_with_logo.png" alt="QR Code HSL">
   </a>
