Chỉnh sửa thông tin và hiển thị giao diện phương tiện

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -122,11 +122,9 @@
           <br>
           <a href="{{ site.map-address-1 }}" title="Google Map">{{ site.address-1 }}</a>
           <br>
-          <a href="{{ site.map-address-2 }}" title="Google Map">{{ site.address-2 }}</a>
-          <br>
+          <!-- <a href="{{ site.map-address-2 }}" title="Google Map">{{ site.address-2 }}</a>
+          <br> -->
           © {{ site.time | date: '%Y' }} {{ site.title }}. All rights reserved.
-          <br>
-          <img alt="Lượt người xem trang" src="https://komarev.com/ghpvc/?username=bangnguyendev&base=23000&abbreviated=true&color=orange">
         </p>
       </div>
     </div>
