--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,8 +12,7 @@
   <!-- lightbox : https://github.com/lokesh/lightbox2.git -->
   <!-- lightbox : https://lokeshdhakar.com/projects/lightbox2/ -->
   <link href="/dist/css/lightbox.min.css" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;600;700&family=Lobster&family=Montserrat:wght@500;700&family=Pacifico&family=Quicksand:wght@400;600&family=Nunito+Sans:wght@400;700&display=swap" rel="stylesheet">
-
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
   <!-- favicon -->
   <link rel="shortcut icon" type="image/ico" href="/favicon.ico" />
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
