--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -35,7 +35,12 @@ common-js:
   {% include footer.html %}
 
   {% include footer-scripts.html %}
+  <!-- Swiper JS -->
+  <!-- SwiperJS core -->
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
+  <!-- File khởi tạo riêng -->
+  <script src="{{ '/dist/js/swiper-init.js' | relative_url }}"></script>
 </body>
 
 </html>
