Cập nhật tính năng tìm kiếm

--- a/_includes/search.html
+++ b/_includes/search.html
@@ -2,26 +2,8 @@
 <div class="search-page">
   <!-- Data header  -->
   <div class="text-center">
-    <div class="waviy">
-      <h2>
-      <span style="--i:1">H</span>
-      <span style="--i:2">a</span>
-      <span style="--i:3">p</span>
-      <span style="--i:4">p</span>
-      <span style="--i:5"> </span>
-      <span style="--i:6">S</span>
-      <span style="--i:7">m</span>
-      <span style="--i:8">a</span>
-      <span style="--i:9">r</span>
-      <span style="--i:10">t</span>
-      <span style="--i:11"> </span>
-      <span style="--i:12">L</span>
-      <span style="--i:13">i</span>
-      <span style="--i:14">g</span>
-      <span style="--i:15">h</span>
-      <span style="--i:16">t</span>
-      </h2>
-    </div>
+    <h2 class="search-header">{{ site.author.name }}</h2>
+    <p class="search-subtitle">Tìm kiếm tour, cẩm nang du lịch ...</p>
   </div>
   <!-- Nút close tìm kiếm  -->
   <div class="search-icon-close-container">
@@ -34,10 +16,10 @@
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
           <!-- Input text -->
-        <h3 class="search-title">Tìm kiếm bài viết về đạo cụ, dịch vụ, hướng dẫn ...</h3>
+        <!-- <h3 class="search-title">Tìm kiếm tour, cẩm nang du lịch ...</h3> -->
         <form id="search-form" onsubmit="return false;">
-          <label for="search-input" class="sr-only">Tìm kiếm bài viết về đạo cụ, dịch vụ, hướng dẫn ...</label>
-          <input type="text" id="search-input" placeholder="🔎argb led pixel..." class="form-control" autocomplete="off" />
+          <!-- <label for="search-input" class="sr-only">Tìm kiếm tour, cẩm nang du lịch ...</label> -->
+          <input type="text" id="search-input" placeholder="🔎 Tìm kiếm ..." class="form-control" autocomplete="off" />
         </form>
         <div id="search-results" class="mini-post-list"></div>
       </div>
