--- a/_includes/footer-scripts.html
+++ b/_includes/footer-scripts.html
@@ -75,30 +75,39 @@
   });
 
   $(document).ready(function () {
-      var $searchPage = $('.search-page');
-      var $searchOpen = $('.search-icon');
-      var $searchClose = $('.search-icon-close');
-      var $searchInput = $('#search-input');
-      var $body = $('body');
+    var $searchPage = $('.search-page');
+    var $searchOpen = $('.search-icon');
+    var $searchClose = $('.search-icon-close');
+    var $searchInput = $('#search-input');
+    var $body = $('body');
 
-      $searchOpen.on('click', function (e) {
-          e.preventDefault();
-          $searchPage.toggleClass('search-active');
-          var prevClasses = $body.attr('class') || '';
-          setTimeout(function () {
-              $body.addClass('no-scroll');
-          }, 400)
+    $searchOpen.on('click', function (e) {
+        e.preventDefault();
+        $searchPage.toggleClass('search-active');
+        var prevClasses = $body.attr('class') || '';
+        setTimeout(function () {
+            $body.addClass('no-scroll');
+        }, 400)
 
-          if ($searchPage.hasClass('search-active')) {
-              $searchClose.on('click', function (e) {
-                  e.preventDefault();
-                  $searchPage.removeClass('search-active');
-                  $body.attr('class', prevClasses);  // from closure 
-              });
-              $searchInput.focus();
-          }
-      });
-  });
+        if ($searchPage.hasClass('search-active')) {
+            $searchClose.on('click', function (e) {
+                e.preventDefault();
+                $searchPage.removeClass('search-active');
+                $body.attr('class', prevClasses);  // restore class
+            });
+            $searchInput.focus();
+        }
+    });
+
+    // ✨ Thêm xử lý nút ESC để đóng
+    $(document).on('keydown', function (e) {
+        if (e.key === "Escape" && $searchPage.hasClass('search-active')) {
+            $searchPage.removeClass('search-active');
+            $body.removeClass('no-scroll');
+        }
+    });
+});
+
 </script>
 
 
