--- a/_includes/swiper-section.html
+++ b/_includes/swiper-section.html
@@ -13,7 +13,7 @@
 <div id="{{ include.id | default: 'special-offer' }}" class="content-index"
   style="background: 
       linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 100%), 
-      url('{{ include.bg | default: "/img/Picture-HSL/background-3.svg" }}');
+      url('{{ include.bg }}');
     background-size: cover;
     background-position: center;
     background-repeat: repeat;">
