Cập nhật script gen tours

--- a/_includes/swiper-section.html
+++ b/_includes/swiper-section.html
@@ -61,6 +61,7 @@
               <div class="component-name">
                 <div class="title-label">
                   {% if post.meta-title %}
+                  {% if post.tour_code %} {{ post.tour_code }} | {% endif %}
                   {{ post["meta-title"] }} {% if post.duration %} | ⏱ {{ post.duration }} {% endif %}
                   {% else %}
                   {{ post.title }}
