Cập nhật các biểu tượng gọi điện, Zalo

--- a/_includes/footer-scripts.html
+++ b/_includes/footer-scripts.html
@@ -137,7 +137,7 @@
 
 
 
-<!-- ZALO OA -->
-<div class="zalo-chat-widget" data-oaid="1321084611356589870" data-welcome-message="Rất vui khi được hỗ trợ bạn!" data-autopopup="0" data-width="300" data-height="330"></div>
+<!-- ZALO OA hiện tại khách k dùng -->
+<!-- <div class="zalo-chat-widget" data-oaid="1084611356589870" data-welcome-message="Rất vui khi được hỗ trợ bạn!" data-autopopup="0" data-width="300" data-height="330"></div>
 
-<script src="https://sp.zalo.me/plugins/sdk.js"></script>
+<script src="https://sp.zalo.me/plugins/sdk.js"></script> -->
