--- a/_includes/qr-zalo.html
+++ b/_includes/qr-zalo.html
@@ -1,7 +1,18 @@
 <!-- _includes/qr-zalo.html -->
 <div class="qr-code">
   <p>📲 Theo dõi Zalo OA Hung Vi Tourist ngay hôm nay!</p>
-  <a href="http://zalo.me/1321084611356589870?src=qr" target="_blank">
-    <img src="/img/Picture-HSL/qrcode_with_logo.png" alt="QR Code HSL">
+  <a href="https://zalo.me/0868549586" target="_blank">
+    <img src="/img/Picture-HSL/qrcode_with_logo.png" alt="QR Code Hung Vĩ Tourist" width="150" height="150" loading="lazy">
   </a>
 </div>
+
+<!-- Thêm vào body của trang -->
+<!-- Icon Zalo gọi điện -->
+<a href="https://zalo.me/0868549586" class="social-icon zalo">
+   <img src="/img/Picture-HSL/Logo_ZALO.svg" alt="Gọi điện" />
+</a>
+
+<!-- Icon gọi điện -->
+<a href="tel:0784140494" class="social-icon phone">
+  <i class="fa fa-phone"></i> <!-- dùng font-awesome hoặc thay bằng <img> -->
+</a>
