Cập nhật giao diện và số điện thoại

--- a/_includes/qr-zalo.html
+++ b/_includes/qr-zalo.html
@@ -13,6 +13,6 @@
 </a>
 
 <!-- Icon gọi điện -->
-<a href="tel:0784140494" class="social-icon phone">
+<a href="tel:{{ site.author.telephone }}" class="social-icon phone">
   <i class="fa fa-phone"></i> <!-- dùng font-awesome hoặc thay bằng <img> -->
 </a>
