--- a/_includes/google_analytics.html
+++ b/_includes/google_analytics.html
@@ -1,13 +1,13 @@
 {% if site.google_analytics %}
 
-<!-- Google tag (gtag.js) duybang-->
-<script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics }}"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-97CTZX8FED"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', '{{ site.google_analytics }}');
+  gtag('config', 'G-97CTZX8FED');
 </script>
 
 {% endif %}
