Cập nhật lại một số thông tin footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -114,18 +114,18 @@
         
         <div class="copyright text-muted">
           <h2>{{ site.company }}</h2><br>
-          {{ site.Tax-code }}<br>
-          <a href="tel:+84{{ site.author.telephone }}" title="{{ site.author.telephone }}">📞Hotline: (+84) {{ site.author.telephone }}</a><br>
-          <a href="mailto:{{ site.author.email }}" title="{{ site.author.email }}">✉️Email: {{ site.author.email }}</a><br>
-          <a href="{{ site.map-address-1 }}" title="Google Map">📌Địa chỉ: {{ site.address-1 }}</a><br>
+          <B>📜Mã số thuế:</B> {{ site.Tax-code }}<br>
+          <a href="tel:+84{{ site.author.telephone }}" title="{{ site.author.telephone }}"><B>📞Hotline:</B> (+84) {{ site.author.telephone }}</a><br>
+          <a href="mailto:{{ site.author.email }}" title="{{ site.author.email }}"><B>✉️Email:</B> {{ site.author.email }}</a><br>
+          <a href="{{ site.map-address-1 }}" title="Google Map"><B>📌Địa chỉ:</B> {{ site.address-1 }}</a><br>
           <!-- <a href="{{ site.map-address-2 }}" title="Google Map">{{ site.address-2 }}</a><br> -->
 
           <h2>GIẤY PHÉP KINH DOANH DỊCH VỤ LỮ HÀNH QUỐC TẾ</h2><br>     
           INTERNATIONAL TOURISM OPERATING LICENSE<br>  
-          Số GP/ No: 72-0004/2023 /CDLQGVN – GP LHQT<br>
-          Do TCDL cấp ngày 18/09/2023<br>
-          Người đại diện: Triệu Hùng Vỉ<br>
-          © {{ site.time | date: '%Y' }} {{ site.title }}. <br> All rights reserved.
+          <B>Số GP/ No:</B> 72-0004/2023 /CDLQGVN – GP LHQT<br>
+          <a href="https://vietnamtourism.gov.vn/" target="_blank">Cục Du Lịch Quốc Gia Việt Nam</a> cấp ngày 18/09/2023<br>
+          <B>Người đại diện:</B> Triệu Hùng Vỉ<br>
+          © {{ site.time | date: '%Y' }} {{ site.title }}. <br> <B>All rights reserved.</B>
         </div> <!-- .copyright -->
       </div>
     </div>
