Cập nhật ghi chú html

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -127,7 +127,7 @@
           <B>Người đại diện:</B> Triệu Hùng Vỉ<br>
           © {{ site.time | date: '%Y' }} {{ site.title }}. <br> <B>All rights reserved.</B>
         </div> <!-- .copyright -->
-      </div>
-    </div>
-  </div>
+      </div> <!-- .col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 -->
+    </div> <!-- .row -->
+  </div> <!-- .container -->
 </footer>
