Cập nhật tọa độ children khi nhấn vào ở nav-bar

--- a/_includes/swiper-section.html
+++ b/_includes/swiper-section.html
@@ -1,4 +1,4 @@
-<div class="gradient-bg">
+<div id="{{ include.id | default: 'special-offer' }}" class="gradient-bg">
   <div class="gradient-text">
       <div class="summary">
         {{ include.title | default: "✨🔥Ưu Đãi Đặc Biệt Hôm Nay🔥✨" }}
@@ -10,7 +10,7 @@
   </div>
 </div>
 
-<div id="{{ include.id | default: 'special-offer' }}" class="content-index"
+<div class="content-index"
   style="background: 
       linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 100%), 
       url('{{ include.bg }}');
